# JNU-Quadruped-Robot-New-Host

./: CMakeLists.txt  README.md
src/: dev_data.c  dev_data.h  main.c  main.h  tasks.c  tasks.h
src/app/: perform.c  perform.h  pose_ctrl.c  pose_ctrl.h
src/dev/: gyro.c  gyro.h  xbox.c  xbox.h
src/usr_lib/CMAT/: arithmetic.c  cmat.h  init.c  operations.c  robotic_tools.c  special_matrices.c  utils.c  views.c
src/usr_lib/FILTER/: filter.c  filter.h
src/usr_lib/PID/: pid.c  pid.h  pid_math.c  pid_math.h  pid_sim.c
src/usr_lib/QUEUE/: queue.c  queue.h
src/usr_lib/RC/: RC.c  RC.h  RC_ext.c  RC_ext.h
src/usr_lib/TP/: TP_polynomial.c  TP_polynomial.h
